--- a/.github/workflows/render-and-publish.yml
+++ b/.github/workflows/render-and-publish.yml
@@ -18,7 +18,7 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown", "knitr"))'
 
       - name: Install packages (needed for Rmd)
-        run: Rscript -e 'remotes::install_deps(quiet = TRUE, upgrade="never")'
+        run: Rscript -e 'remotes::install_deps(quiet = TRUE, upgrade="never", build=FALSE)'
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
