Removed freeze:true
This was causing the outputs (other than html/pages) to not update with the changes made to the qmd

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,7 +38,7 @@ bibliography: [references.bib]
 execute:
   echo: false
   code-overflow: wrap
-  freeze: true
+#  freeze: true
 
 format:
   docx:
